test_programs/compile_failure/noirc_frontend_tests_imports_can_use_pub_use_item/src/main.nr

    mod foo {
        mod bar {
            pub fn baz() {}
        }

        pub use bar::baz;
    }

    fn main() {
        foo::baz();
    }
    